# NNAware

./: .gitignore  library.properties
desktop_tests/: CMakeLists.txt  mock_transport.h  protocol_compatibility.cpp  test_address.cpp  test_buffer.cpp  test_cross_layer_collision.cpp  test_node.cpp  test_node_failure.cpp  test_packet.cpp  test_reference_network.cpp  test_scheduler.cpp  test_setup.cpp  test_transport.cpp
examples/AddressTest/: AddressTest.ino
examples/PacketTest/: PacketTest.ino
examples/RunningNode/: RunningNode.ino
examples/SetupTest/: SetupTest.ino
python_tests/: conftest.py
python_tests/compatibility/: cpp_runner.py  golden_packets.json  packet_diff.py
python_tests/tests/: fault_injection.py  packet_builder.py  receiver.py  test_cpp_compatibility.py  test_fault_injection.py  test_float_endianness.py  test_golden_packets.py  test_out_of_order_packets.py  test_packet_invalid.py  test_packet_valid.py  test_randomized_packets.py  transmitter.py
src/: NNActivation.h  NNAddress.h  NNBuffer.h  NNFailover.h  NNNode.h  NNPacket.h  NNScheduler.h  NNSetupProtocol.h  NNTransport.h  NNTransportBLE.h  NNTransportLoopback.h  NNTransportMQTT.h  NNTransportUDP.h  NNTransportUDPMulticast.h
tools/nn_mapper/core/: __init__.py  codegen.py  constraints.py  model_io.py  simulate.py  topology.py
tools/nn_mapper/examples/: and_gate.json
tools/nn_mapper/tests/: test_and_gate.py
tools/nn_setup/: device_manifest.py  devices.json  generate_manifest.py  hardware_ids.json  network.json  setup_messages.py  setup_tool.py  wire_format.py
